CFs added (disks and protostars)

--- a/CF.ipynb
+++ b/CF.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 316,
    "id": "e6a0aca9",
    "metadata": {},
    "outputs": [],
@@ -179,13 +179,26 @@
     "clas_f2 = np.array(df_final2['class'], dtype=str)\n",
     "\n",
     "yso_clas = np.array(['protostars', 'disks', 'td', 'nd_proto_faint'])\n",
-    "i_yso, = np.where(np.isin(clas_f2, yso_clas))"
+    "proto_clas = np.array(['protostars', 'nd_proto_faint'])\n",
+    "prems_clas = np.array(['disks', 'td'])\n",
+    "\n",
+    "i_yso, = np.where(np.isin(clas_f2, yso_clas))\n",
+    "i_proto, = np.where(np.isin(clas_f2, proto_clas))\n",
+    "i_prems, = np.where(np.isin(clas_f2, prems_clas))"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1c3f1aeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 311,
-   "id": "bff9b775",
+   "id": "8ccbbc51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "2979d111",
+   "id": "ec46d3e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "92cc8f13",
+   "id": "a7250406",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,8 +835,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i_prems, = np.where(catalog['hops']<0)\n",
-    "i_proto, = np.where((catalog['hops']>0))\n",
+    "i_Gprems, = np.where(catalog['hops']<0)\n",
+    "i_Gproto, = np.where((catalog['hops']>0))\n",
     "i_Gyso,  = np.where(((catalog['hops']==0)&(catalog['separation']<1000)&(catalog['separation']>100)&\n",
     "         (catalog['closesthops']<0.))|(catalog['hops']<0)|(catalog['hops']>0))"
    ]
@@ -843,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "89e2f0a1",
+   "id": "5d076953",
    "metadata": {
     "scrolled": false
    },
@@ -862,7 +875,7 @@
     }
    ],
    "source": [
-    "deltam, R, separations = CF_G(ra_G, dec_G, m_G, i_proto)"
+    "deltam, R, separations = CF_G(ra_G, dec_G, m_G, i_Gproto)"
    ]
   },
   {
@@ -887,12 +900,12 @@
     }
    ],
    "source": [
-    "deltam, R, separations = CF_G(ra_G, dec_G, m_G, i_prems)"
+    "deltam, R, separations = CF_G(ra_G, dec_G, m_G, i_Gprems)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3d50de6e",
+   "id": "2e5b85bc",
    "metadata": {},
    "source": [
     "*NGC 2024 calculation*"
@@ -901,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "1ced3ffb",
+   "id": "fdc6bc68",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +931,7 @@
    ],
    "source": [
     "#c = catalog\n",
-    "ra, dec, m, i_yso = ra_G, dec_G, m_G, i_prems #np.append(i_prems, i_proto)\n",
+    "ra, dec, m, i_yso = ra_G, dec_G, m_G, i_Gprems #np.append(i_prems, i_proto)\n",
     "\n",
     "c2 = SkyCoord(ra=ra*u.degree, dec=dec*u.degree, distance=420*u.pc, frame='fk5')\n",
     "   \n",
@@ -973,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0949361",
+   "id": "e11feaaa",
    "metadata": {},
    "source": [
     "## CF in selected regions"
@@ -995,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "8fbe7597",
+   "id": "da805092",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac4a5392",
+   "id": "1aa8cd0b",
    "metadata": {},
    "source": [
     "#### NGC 1977 extended "
@@ -1039,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "b8450782",
+   "id": "0d502a52",
    "metadata": {
     "scrolled": false
    },
@@ -1056,30 +1069,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 298,
-   "id": "79050c27",
+   "cell_type": "markdown",
+   "id": "039e18f7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "202"
-      ]
-     },
-     "execution_count": 298,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(i_2)"
+    "All YSO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "99008cd2",
+   "id": "8c6d0490",
    "metadata": {
     "scrolled": false
    },
@@ -1103,40 +1103,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 305,
-   "id": "cd508869",
+   "cell_type": "markdown",
+   "id": "9391c0c4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(610, 43)"
-      ]
-     },
-     "execution_count": 305,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(i_1), len(i_yso[np.isin(i_yso, i_1)])"
+    "Protostars"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "44582644",
+   "execution_count": 319,
+   "id": "e3a12987",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N_cand:  0\n",
+      "N_cont within 200-5000 (before correction):  0.0\n",
+      "N_cont within 200-5000:  0.0\n",
+      "N_contaminants:  0.0\n",
+      "N_comp:  0\n",
+      "CF (2):  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Contaminants - all survey objects\n",
+    "dmag, R, dist = CF(ra_f2, dec_f2, m_f2, i_1[np.isin(i_1, i_proto)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b268f63",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Pre-Main Sequence Stars"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
-   "id": "4b2fee73",
+   "execution_count": 320,
+   "id": "6f575536",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1147,19 +1160,19 @@
       "N_cont within 200-5000 (before correction):  1.8857142857142857\n",
       "N_cont within 200-5000:  1.3708295131014774\n",
       "N_contaminants:  40.0\n",
-      "N_comp:  -0.7416590262029552\n",
-      "CF (43):  0.01463187178833773\n"
+      "N_comp:  0.6291704868985224\n",
+      "CF (41):  0.015345621631671278\n"
      ]
     }
    ],
    "source": [
-    "#Contaminants - objects only in the selected environment\n",
-    "dmag, R, dist = CF(ra_f2[i_1], dec_f2[i_1], m_f2[i_1], np.where(np.isin(i_1, i_yso))[0])"
+    "#Contaminants - all survey objects\n",
+    "dmag, R, dist = CF(ra_f2, dec_f2, m_f2, i_1[np.isin(i_1, i_prems)])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "389972ce",
+   "id": "c77369c8",
    "metadata": {},
    "source": [
     "#### M43 "
@@ -1168,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "ab615d35",
+   "id": "d77eb251",
    "metadata": {
     "scrolled": false
    },
@@ -1187,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 283,
-   "id": "6567fedc",
+   "id": "3e6541be",
    "metadata": {
     "scrolled": true
    },
@@ -1211,51 +1224,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 302,
-   "id": "75be0bf6",
+   "cell_type": "markdown",
+   "id": "4b06a13f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.651162790697675"
-      ]
-     },
-     "execution_count": 302,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 301,
-   "id": "e73680dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(43, 42)"
-      ]
-     },
-     "execution_count": 301,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(i_yso[np.isin(i_yso, i_1)]), len(i_yso[np.isin(i_yso, i_2)])"
+    "All YSO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 280,
-   "id": "32f6d4cd",
+   "id": "a8a8123a",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1277,7 +1258,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd4e02a",
+   "id": "a3fbd59f",
+   "metadata": {},
+   "source": [
+    "Note: No protostars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de4a7c93",
+   "metadata": {},
+   "source": [
+    "Pre-Main Sequence Stars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "id": "e147b4e7",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N_cand:  4\n",
+      "N_cont within 200-5000 (before correction):  2.451428571428571\n",
+      "N_cont within 200-5000:  1.800740162882923\n",
+      "N_contaminants:  52.0\n",
+      "N_comp:  2.1992598371170766\n",
+      "CF (42):  0.05236332945516849\n"
+     ]
+    }
+   ],
+   "source": [
+    "dmag, R, dist = CF(ra_f2, dec_f2, m_f2, i_prems[np.isin(i_prems, i_2)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45ee974c",
    "metadata": {},
    "source": [
     "#### Orion nebula extended "
@@ -1286,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "3c205076",
+   "id": "0737c2c4",
    "metadata": {
     "scrolled": false
    },
@@ -1303,37 +1325,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 284,
-   "id": "a72ebbbc",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N_cand:  63\n",
-      "N_cont within 200-5000 (before correction):  28.332857142857144\n",
-      "N_cont within 200-5000:  24.26292388303764\n",
-      "N_contaminants:  601.0\n",
-      "N_comp:  14.474152233924709\n",
-      "CF (422):  0.09179401923450796\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "75153453",
+   "metadata": {},
    "source": [
-    "#Contaminants - objects only in the selected environment\n",
-    "dmag, R, dist = CF(ra_f2[i_3], dec_f2[i_3], m_f2[i_3], np.where(np.isin(i_3, i_yso))[0])"
+    "All YSO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 282,
-   "id": "b9949541",
+   "id": "44803577",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1354,30 +1358,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 242,
-   "id": "8d6f8009",
+   "cell_type": "markdown",
+   "id": "b15e6297",
    "metadata": {},
+   "source": [
+    "Protostars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "id": "bf7393b5",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(610, 202, 2207)"
-      ]
-     },
-     "execution_count": 242,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N_cand:  5\n",
+      "N_cont within 200-5000 (before correction):  1.98\n",
+      "N_cont within 200-5000:  1.816981199361014\n",
+      "N_contaminants:  42.0\n",
+      "N_comp:  3.183018800638986\n",
+      "CF (32):  0.09946933751996831\n"
+     ]
     }
    ],
    "source": [
-    "len(i_1), len(i_2), len(i_3)"
+    "dmag, R, dist = CF(ra_f2, dec_f2, m_f2, i_proto[np.isin(i_proto, i_3)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39ae9dd4",
+   "metadata": {},
+   "source": [
+    "Pre-Main Sequence Stars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "id": "7fb6a28a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N_cand:  58\n",
+      "N_cont within 200-5000 (before correction):  26.447142857142858\n",
+      "N_cont within 200-5000:  22.53915794972721\n",
+      "N_contaminants:  561.0\n",
+      "N_comp:  35.46084205027279\n",
+      "CF (390):  0.09092523602634048\n"
+     ]
+    }
+   ],
+   "source": [
+    "dmag, R, dist = CF(ra_f2, dec_f2, m_f2, i_prems[np.isin(i_prems, i_3)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15aec564",
+   "id": "71106927",
    "metadata": {},
    "outputs": [],
    "source": []
