edits for the N_contaminants

--- a/CF - Probability.ipynb
+++ b/CF - Probability.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 372,
-   "id": "c0b3f54e",
+   "id": "7e026901",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "11b1b959",
+   "id": "1531e4c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "475f13c5",
+   "id": "b269f482",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ed452216",
+   "id": "3c7ea325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "8b747f35",
+   "id": "d000d4ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "558529dd",
+   "id": "8afcbc6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3b093c31",
+   "id": "fe26469d",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "961f8c3f",
+   "id": "9b21bc16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "1eb098af",
+   "id": "902f41a5",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c3b84c2d",
+   "id": "594a54d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c621f99f",
+   "id": "2818d411",
    "metadata": {},
    "source": [
     "### P($<\\Delta$r) = $\\frac{r^2 - r^2_{1}}{r^2_{2} - r^2_{1}}$\n",
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "503a6170",
+   "id": "2ce11e06",
    "metadata": {},
    "source": [
     "$r = \\sqrt{N(r_2^2 - r_1^2) + r_1^2}$"
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 522,
-   "id": "4952e272",
+   "id": "b541c387",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "9743e067",
+   "id": "e4f86f52",
    "metadata": {
     "scrolled": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e717ca8",
+   "id": "2b16dcbc",
    "metadata": {},
    "source": [
     "### P($<\\Delta$m)"
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 648,
-   "id": "4b9177bb",
+   "id": "1e4c3838",
    "metadata": {
     "scrolled": false
    },
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 881,
-   "id": "2a4516b1",
+   "id": "c076d79a",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cc9f650",
+   "id": "14b48454",
    "metadata": {},
    "source": [
     "### P($<\\Delta$m) = A - B $\\cdot e^{-C \\cdot x}$ (CDF),\n",
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da1a9fe",
+   "id": "9c7a6747",
    "metadata": {},
    "source": [
     "## $P(\\Sigma_{los} | N_{cont})= \\frac{(\\Sigma_{los}\\Omega_{cont})^{N_{cont}}}{N_{cont}!}e^{-\\Sigma_{los}\\Omega_{cont}}$\n",
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dfa3a11",
+   "id": "0f77f582",
    "metadata": {},
    "source": [
     "----"
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22dd016b",
+   "id": "30d47760",
    "metadata": {},
    "source": [
     "## Step 1: The model for N_contaminants distribution\n",
@@ -675,8 +675,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 908,
-   "id": "5e9cea32",
+   "execution_count": 922,
+   "id": "d290d14f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 1000)"
+      ]
+     },
+     "execution_count": 922,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ncont_forecast.posterior_predictive['sig'].data.shape[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 918,
+   "id": "de1fc776",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +708,7 @@
       "CompoundStep\n",
       ">NUTS: [sig]\n",
       ">Metropolis: [Ncont]\n",
-      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 40 seconds.\n",
+      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 77 seconds.\n",
       "Sampling: [Ncont, sig]\n"
      ]
     }
@@ -707,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c85da19c",
+   "id": "0a9bfe07",
    "metadata": {},
    "source": [
     "## Step 2: Randomly picking one N\n",
@@ -722,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 909,
-   "id": "ef0cb087",
+   "id": "6417651e",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c4b1f95",
+   "id": "d14f0eb4",
    "metadata": {},
    "source": [
     "### So, we flatten the 2-D array\n",
@@ -767,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55118e72",
+   "id": "8fded3be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33325a1",
+   "id": "1315f4b6",
    "metadata": {},
    "source": [
     "## Step 3:  N_cont_det\n",
@@ -789,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 914,
-   "id": "414708ae",
+   "id": "b0a4a124",
    "metadata": {
     "scrolled": false
    },
@@ -817,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 915,
-   "id": "71e9441e",
+   "id": "a2b3bdd6",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +858,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1904d2e4",
+   "id": "cb0bd736",
    "metadata": {},
    "source": [
     "--------"
@@ -846,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 913,
-   "id": "1bbe1e61",
+   "id": "9eb64713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 916,
-   "id": "37debe3c",
+   "id": "d6e158aa",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d381b7a3",
+   "id": "de57c869",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -960,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 893,
-   "id": "1a7a54d5",
+   "id": "46b278e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 809,
-   "id": "304f6045",
+   "id": "f131a04d",
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": 772,
-   "id": "5962db03",
+   "id": "abfe9575",
    "metadata": {
     "scrolled": true
    },
@@ -1548,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 860,
-   "id": "bf3c1be8",
+   "id": "ce716b60",
    "metadata": {},
    "outputs": [
     {
@@ -1572,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": 861,
-   "id": "0004bdac",
+   "id": "17a13e55",
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": 777,
-   "id": "482e7d60",
+   "id": "d6bbc818",
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 805,
-   "id": "aa39d860",
+   "id": "b7405662",
    "metadata": {},
    "outputs": [
     {
@@ -1635,14 +1656,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7c585c1",
+   "id": "a759f443",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c3d3aeb8",
+   "id": "315c3654",
    "metadata": {},
    "source": [
     "#### the following loops broken at loop 919. Therefore ran a separate set of oterations for 81 samples`"
@@ -1651,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 883,
-   "id": "2b79e55c",
+   "id": "d87d1302",
    "metadata": {
     "scrolled": true
    },
@@ -1768,7 +1789,7 @@
   {
    "cell_type": "code",
    "execution_count": 904,
-   "id": "8f9ce8a2",
+   "id": "3bbd07c8",
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": 905,
-   "id": "dde18fc0",
+   "id": "24bb1f40",
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1856,7 @@
   {
    "cell_type": "code",
    "execution_count": 880,
-   "id": "ce8a1951",
+   "id": "04ae20d0",
    "metadata": {
     "collapsed": true
    },
@@ -1869,7 +1890,7 @@
   {
    "cell_type": "code",
    "execution_count": 897,
-   "id": "7465b523",
+   "id": "ee4b5076",
    "metadata": {
     "scrolled": false
    },
@@ -1906,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": 857,
-   "id": "0559cd9b",
+   "id": "f243d2ec",
    "metadata": {
     "scrolled": false
    },
@@ -1943,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 876,
-   "id": "f06ed90c",
+   "id": "9db818fd",
    "metadata": {
     "scrolled": false
    },
@@ -1982,7 +2003,7 @@
   {
    "cell_type": "code",
    "execution_count": 875,
-   "id": "def749e8",
+   "id": "0eb7a610",
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": 718,
-   "id": "3dded8ff",
+   "id": "ba3cdd62",
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +2070,7 @@
   {
    "cell_type": "code",
    "execution_count": 703,
-   "id": "06953afa",
+   "id": "fcd559ed",
    "metadata": {
     "scrolled": false
    },
@@ -2090,7 +2111,7 @@
   {
    "cell_type": "code",
    "execution_count": 691,
-   "id": "04d88b85",
+   "id": "d7a3da0f",
    "metadata": {},
    "outputs": [
     {
@@ -2125,7 +2146,7 @@
   {
    "cell_type": "code",
    "execution_count": 670,
-   "id": "2f880f78",
+   "id": "51acd171",
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2167,7 @@
   {
    "cell_type": "code",
    "execution_count": 623,
-   "id": "bb6fe6d8",
+   "id": "d9dc3bd9",
    "metadata": {
     "collapsed": true
    },
@@ -2182,7 +2203,7 @@
   {
    "cell_type": "code",
    "execution_count": 611,
-   "id": "46eeef97",
+   "id": "06f3d7a8",
    "metadata": {},
    "outputs": [
     {
@@ -2203,7 +2224,7 @@
   {
    "cell_type": "code",
    "execution_count": 586,
-   "id": "891218ba",
+   "id": "c093be55",
    "metadata": {
     "collapsed": true
    },
@@ -2232,7 +2253,7 @@
   {
    "cell_type": "code",
    "execution_count": 574,
-   "id": "d5210a9d",
+   "id": "461e2d38",
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2285,7 @@
   {
    "cell_type": "code",
    "execution_count": 562,
-   "id": "3187a7ec",
+   "id": "ae72f006",
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2319,7 @@
   {
    "cell_type": "code",
    "execution_count": 545,
-   "id": "465348d3",
+   "id": "8b60e303",
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2340,7 @@
   {
    "cell_type": "code",
    "execution_count": 504,
-   "id": "0999bb31",
+   "id": "8530eb4f",
    "metadata": {},
    "outputs": [
     {
@@ -2349,7 +2370,7 @@
   {
    "cell_type": "code",
    "execution_count": 496,
-   "id": "c068dc10",
+   "id": "ee5d5a06",
    "metadata": {
     "collapsed": true
    },
@@ -2383,7 +2404,7 @@
   {
    "cell_type": "code",
    "execution_count": 497,
-   "id": "6011abd2",
+   "id": "6b2d7153",
    "metadata": {},
    "outputs": [
     {
@@ -2404,7 +2425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950931aa",
+   "id": "635b1de8",
    "metadata": {},
    "source": [
     "-----"
@@ -2412,7 +2433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f04a24d",
+   "id": "8f2972a0",
    "metadata": {},
    "source": [
     "Test scripts are below"
@@ -2421,7 +2442,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "9a5dd872",
+   "id": "d49a5e5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2432,7 +2453,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "37823e9e",
+   "id": "857eb58a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2446,7 +2467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e4f375",
+   "id": "86642d84",
    "metadata": {},
    "source": [
     "*Note: missng constant = (N_cont+1)/O_cont*"
@@ -2455,7 +2476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5215e8e",
+   "id": "aea73f5b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2463,7 +2484,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "8ee15661",
+   "id": "07cc1b91",
    "metadata": {},
    "outputs": [
     {
@@ -2583,7 +2604,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "c2d50a0e",
+   "id": "70c7b836",
    "metadata": {
     "collapsed": true
    },
@@ -3844,7 +3865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c65b62d6",
+   "id": "c584621b",
    "metadata": {},
    "source": [
     "## 1000 Draws"
@@ -3852,7 +3873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8a57047",
+   "id": "2680779d",
    "metadata": {},
    "source": [
     "### $\\Delta m = -\\frac{ln[(A - N)/B]}{c}$\n",
@@ -3862,7 +3883,7 @@
   {
    "cell_type": "code",
    "execution_count": 376,
-   "id": "9ab316f9",
+   "id": "3f888f05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3878,7 +3899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94158574",
+   "id": "8c828430",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3886,7 +3907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff920d8",
+   "id": "13c18f48",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3894,7 +3915,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "0e41a9e1",
+   "id": "bbbcbc16",
    "metadata": {
     "scrolled": false
    },
@@ -3932,7 +3953,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "61d7ff78",
+   "id": "7ca3346d",
    "metadata": {
     "collapsed": true
    },
@@ -3968,7 +3989,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "7d5af0f1",
+   "id": "90651c20",
    "metadata": {},
    "outputs": [
     {
@@ -3991,7 +4012,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "2cf3ab6a",
+   "id": "ca98fef5",
    "metadata": {},
    "outputs": [
     {
@@ -4020,7 +4041,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "69e7903f",
+   "id": "244b980e",
    "metadata": {},
    "outputs": [
     {
@@ -4152,7 +4173,7 @@
   {
    "cell_type": "code",
    "execution_count": 482,
-   "id": "3ae45401",
+   "id": "bc07f2d7",
    "metadata": {
     "scrolled": true
    },
@@ -4327,7 +4348,7 @@
   {
    "cell_type": "code",
    "execution_count": 484,
-   "id": "d546fb14",
+   "id": "5f1482a4",
    "metadata": {},
    "outputs": [
     {
@@ -4359,7 +4380,7 @@
   {
    "cell_type": "code",
    "execution_count": 479,
-   "id": "71270d0d",
+   "id": "b1fb5817",
    "metadata": {},
    "outputs": [
     {
@@ -4399,7 +4420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e7ed4a",
+   "id": "ab7d8951",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4410,7 +4431,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "5e86c5ef",
+   "id": "fb1f93cc",
    "metadata": {
     "collapsed": true
    },
@@ -4451,7 +4472,7 @@
   {
    "cell_type": "code",
    "execution_count": 373,
-   "id": "f3e6a33b",
+   "id": "68716c7d",
    "metadata": {
     "scrolled": false
    },
@@ -4492,7 +4513,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "id": "159649bf",
+   "id": "9388ab58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4505,7 +4526,7 @@
   {
    "cell_type": "code",
    "execution_count": 320,
-   "id": "6d3bd9aa",
+   "id": "8c200969",
    "metadata": {},
    "outputs": [
     {
@@ -4528,7 +4549,7 @@
   {
    "cell_type": "code",
    "execution_count": 408,
-   "id": "e8b6b8f3",
+   "id": "4e1f6792",
    "metadata": {},
    "outputs": [
     {
@@ -4549,7 +4570,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "4a1ca846",
+   "id": "30881348",
    "metadata": {
     "scrolled": true
    },
@@ -4572,7 +4593,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "dd5545ec",
+   "id": "b6c53147",
    "metadata": {
     "collapsed": true
    },
@@ -4595,7 +4616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a63d50f",
+   "id": "d2442ca5",
    "metadata": {},
    "outputs": [],
    "source": []
